# Fusang

./: .gitignore  LICENSE  README.md  README.光合.md  analysis.ipynb  constraints.DCU.txt  fusang.py  model-traning.ipynb  new.ipynb  pyproject.toml  requirements.DCU.in  requirements.txt  train-S1U-run-2.ipynb  train-S1U.ipynb  train.ipynb  treeview.py  upgrade-model.py
data/: multiz470way-urls.txt
doc/: optimization_analysis.md
example_msa/: CYTB_1.aligned.fas  CYTB_1.fas  CYTB_2.aligned.fas  CYTB_2.fas  CYTB_3.aligned.fas  README.md  mammals-cox1_1.aligned.fas  mammals-cox1_1.fas  mammals-cox1_2.aligned.fas  mammals-cox1_2.fas  mammals-cox1_3.aligned.fas  sars-cov-2_1.fas  sars-cov-2_2.fas  sars-cov-2_40seq_1.aligned.fas  sars-cov-2_40seq_2.aligned.fas  sars-cov-2_40seq_3.aligned.fas
ghfund/: README.md  demo-1.sh  demo-2.sh  demo-3.sh  requirements.txt  run-all.sh  setup.sh  测试方法.md  软件使用说明.md
old_model/: README.md  upgrade-models.py
public data/Fusang_100_taxa/fusang/: fusang.py
simulation/: .gitignore  README.md  batch-gen-datasets.sh  gen-dataset.sh  run-simulate.sh
simulation/code/: extract_fasta_data.py  gen_control_file.R  gen_control_file.py  gen_numpy.py  simulate_sequence.py  simulate_topology.py
tests/: README.md  conftest.py  test_data_processing.py  test_evaluation.py  test_mask_operations.py  test_math_utils.py  test_quartet.py  test_tree_operations.py
