[project]
name = "fusang"
version = "0.1.0"
description = "A framework used for the reconstruction of phylogenetic tree via deep learning methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "ete3>=3.1.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "tensorflow[and-cuda]>=2.20.0",
]
