[project]
name = "fusang"
version = "0.1.0"
description = "A framework used for the reconstruction of phylogenetic tree via deep learning methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "ete3>=3.1.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.11.0",
    "tensorflow[and-cuda]>=2.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.pytest.ini_options]
# Filter warnings from third-party dependencies
filterwarnings = [
    # Ignore deprecation warnings from ete3 library (third-party)
    "ignore::DeprecationWarning:ete3",
    "ignore:.*cgi.*:DeprecationWarning",
    # Ignore FutureWarning from keras/tensorflow (third-party)
    "ignore::FutureWarning",
]
